[gd_scene load_steps=5 format=3 uid="uid://djq5g12d6dbl6"]

[ext_resource type="Texture2D" uid="uid://cppgnwuwyj7e2" path="res://Pictures/Triangle/Triangle5.png" id="1_0ebwb"]
[ext_resource type="Script" uid="uid://bend41gnbyxeb" path="res://Scenes/UpgradeScreen/Slot/upgrade_slotl.gd" id="1_da47n"]
[ext_resource type="Texture2D" uid="uid://c335ro0oiq6ot" path="res://Pictures/Triangle/Triangle2.png" id="2_da47n"]
[ext_resource type="Texture2D" uid="uid://caodvrcgnquij" path="res://Pictures/Triangle/Triangle4.png" id="3_yyfgj"]

[node name="UpgradeSlotl" type="Control"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_da47n")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 15.0
offset_top = 9.0
offset_right = -15.0
offset_bottom = 51.0
grow_horizontal = 2
color = Color(0, 0, 0, 1)

[node name="OptionLabel" type="Label" parent="LabelBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "POWER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NumBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 65.0
offset_right = -40.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="NumLabel" type="Label" parent="NumBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Lv 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 113.0
offset_top = 85.0
offset_right = 143.0
offset_bottom = 115.0
texture_normal = ExtResource("1_0ebwb")
texture_pressed = ExtResource("1_0ebwb")
texture_hover = ExtResource("2_da47n")
ignore_texture_size = true
stretch_mode = 0

[node name="LeftButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 115.0
offset_right = 66.0
offset_bottom = 145.0
rotation = 3.1415927
texture_normal = ExtResource("3_yyfgj")
texture_pressed = ExtResource("3_yyfgj")
texture_hover = ExtResource("2_da47n")
ignore_texture_size = true
stretch_mode = 0

[connection signal="button_down" from="RightButton" to="." method="_on_right_button_button_down"]
[connection signal="button_down" from="LeftButton" to="." method="_on_left_button_button_down"]
